--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 .display {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-end;
   height: 160px;
   padding: 16px;
